--- a/packages/robo-advisor-backend/package.json
+++ b/packages/robo-advisor-backend/package.json
@@ -4,6 +4,11 @@
   "main": "api/index.js",
   "author": "Bamidele Isaac",
   "license": "MIT",
+  "scripts": {
+    "start": "node server",
+    "dev": "nodemon server",
+    "startDatabase":"cd C:/Program Files/MongoDB/Server/7.0/bin && mongod.exe"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "cookie-parser": "^1.4.6",
