added instrument weight controller and route

--- a/packages/robo-advisor-backend/.env
+++ b/packages/robo-advisor-backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URI=mongodb://127.0.0.1:27017/roboAdvisorDb
+MONGODB_CONNECTION_STRING=mongodb+srv://isaac:bamidele@roboadvisor.9ql51ei.mongodb.net/?retryWrites=true&w=majority
