--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 
 # compiled output
 dist
@@ -6,7 +7,16 @@ tmp
 /out-tsc
 
 # dependencies
-node_modules
+/node_modules
+/packages/**/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
 
 # IDEs and editors
 /.idea
@@ -24,8 +34,14 @@ node_modules
 !.vscode/launch.json
 !.vscode/extensions.json
 
+
 # misc
-/.sass-cache
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
@@ -33,6 +49,10 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # System Files
 .DS_Store
