--- a/packages/robo-advisor-backend/package.json
+++ b/packages/robo-advisor-backend/package.json
@@ -7,16 +7,18 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "startDatabase":"cd C:/Program Files/MongoDB/Server/7.0/bin && mongod.exe"
+    "startDatabase": "cd C:/Program Files/MongoDB/Server/7.0/bin && mongod.exe"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
-    "mongoose": "^6.8.1",
+    "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "mongoose": "^6.8.1",
     "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
