--- a/packages/robo-advisor-frontend/package.json
+++ b/packages/robo-advisor-frontend/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^8.2.0",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
-    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.5",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "transform-svg": "npx @svgr/cli --typescript -d ./src/assets/images ./src/assets/images/riskprofile.svg"
   },
   "eslintConfig": {
     "extends": [
