--- a/packages/robo-advisor-frontend/package.json
+++ b/packages/robo-advisor-frontend/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
