--- a/packages/robo-advisor-backend/package.json
+++ b/packages/robo-advisor-backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
+    "start-prod": "NODE_ENV=production node api/index.js",
     "startWinDatabase": "cd C:/Program Files/MongoDB/Server/7.0/bin && mongod.exe"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "mongoose": "^8.0.0",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^21.1.0",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
