--- a/packages/robo-advisor-backend/.env.prod
+++ b/packages/robo-advisor-backend/.env.prod
@@ -1,1 +1,1 @@
-MONGODB_CONNECTION_STRING=mongodb+srv://bamidele:F26iNueCCGh6aX92@9ql51ei.mongodb.net/roboAdvisor?retryWrites=true&w=majority
+MONGODB_CONNECTION_STRING=mongodb+srv://bamidele:7MQJfMg4p4XFAhbH@roboadvisor.9ql51ei.mongodb.net/?retryWrites=true&w=majority
